force-app/main/default/objects/AgileChartRecord__c/AgileChartRecord__c.object-meta.xml
<CustomObject>
    <description>Registros de pontos para gerar burndown chart ou demais gráficos específicos</description>
    <label>Agile Chart Record</label>
    <nameField>
        <displayFormat>CR{00000}</displayFormat>
        <label>Chart Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agile Chart Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>