force-app/main/default/objects/AgileChartRecord__c/fields/ActualPoints__c.field-meta.xml
<CustomField>
    <fullName>ActualPoints__c</fullName>
    <inlineHelpText>Pontos das Works não finalizadas</inlineHelpText>
    <label>Pontos Reais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>