force-app/main/default/objects/AgileChartRecord__c/fields/ActualPointsCreated__c.field-meta.xml
<CustomField>
    <fullName>ActualPointsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica se foi criado o registro de pontos atuais do dia da sprint</inlineHelpText>
    <label>ActualPointsCreated</label>
    <type>Checkbox</type>
</CustomField>