force-app/main/default/objects/AgileChartRecord__c/fields/EstimatedPoints__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPoints__c</fullName>
    <label>Pontos Estimados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>