force-app/main/default/objects/AgileChartRecord__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <formula>IF(ISPICKVAL(Type__c,&quot;Baseline&quot;),EstimatedPoints__c,     ActualPoints__c)</formula>
    <label>Pontos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>