force-app/main/default/objects/AgileChartRecord__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Agile Chart Records</relationshipLabel>
    <relationshipName>AgileChartRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>