force-app/main/default/objects/AgileChartRecord__c/fields/SprintDate__c.field-meta.xml
<CustomField>
    <fullName>SprintDate__c</fullName>
    <inlineHelpText>Preencha com o dia da sprint, por exemplo, se a Sprint tem 10 dias, aqui deve ser preenchido com a data do dia 1, dia 2...</inlineHelpText>
    <label>Data</label>
    <type>Date</type>
</CustomField>