force-app/main/default/objects/AgileChartRecord__c/fields/SprintDateOrder__c.field-meta.xml
<CustomField>
    <fullName>SprintDateOrder__c</fullName>
    <inlineHelpText>Se a data do registro representa o primeiro dia da Sprint, deverá ter o número 1... Se for o segundo, número 2...  E assim por diante.</inlineHelpText>
    <label>Ordem do Dia da Sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>