force-app/main/default/objects/AgileChartRecord__c/listViews/Squad_1_Sprint_Atual.listView-meta.xml
<ListView>
    <fullName>Squad_1_Sprint_Atual</fullName>
    <columns>NAME</columns>
    <columns>SprintDate__c</columns>
    <columns>EstimatedPoints__c</columns>
    <columns>ActualPoints__c</columns>
    <columns>Points__c</columns>
    <columns>SprintDateOrder__c</columns>
    <columns>Sprint__c</columns>
    <columns>Type__c</columns>
    <columns>ActualPointsCreated__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentSprint__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>SQ1: Sprint 02</value>
    </filters>
    <label>Squad 1 - Sprint Atual</label>
</ListView>