force-app/main/default/objects/AgileChartRecord__c/listViews/Squad_2_Sprint_Atual.listView-meta.xml
<ListView>
    <fullName>Squad_2_Sprint_Atual</fullName>
    <columns>NAME</columns>
    <columns>SprintDate__c</columns>
    <columns>EstimatedPoints__c</columns>
    <columns>ActualPoints__c</columns>
    <columns>Points__c</columns>
    <columns>SprintDateOrder__c</columns>
    <columns>Sprint__c</columns>
    <columns>Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>SQT? Sprint Teste 01</value>
    </filters>
    <label>Squad 2 - Sprint Atual</label>
</ListView>